--- a/test-licht-brechung-collab.ipynb
+++ b/test-licht-brechung-collab.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "!{sys.executable} -m pip install ipycanvas"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -14,6 +24,16 @@
     "import time\n",
     "import threading as th\n",
     "import sys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google.colab import output\n",
+    "output.enable_custom_widget_manager()"
    ]
   },
   {
